--- a/39-figureS11.Rmd
+++ b/39-figureS11.Rmd
@@ -13,6 +13,9 @@ library(rstatix)
 
 theme_set(theme_classic())
 if (interactive()) load("tcr_objects.Rdata")
+boxdir <- file.path("figures", "boxplot_comparisons")
+dir.create(boxdir, showWarnings = FALSE)
+
 ```
 
 ## Validating Trees
@@ -21,7 +24,7 @@ if (interactive()) load("tcr_objects.Rdata")
 
 These figures were requested by a helpful reviewer who wished to see the between -vs within system distances quantified. For reference, the following figure shows the distances between tissues by the median GTEx summarized data:
 
-```{r}
+```{r 39-figureS11-1 }
 comp_df <- jsd_individuals_dist_list[["Tissues_in_TCR"]][[2]] %>% as_tibble(rownames = "rawA") %>%
   pivot_longer(cols = -rawA, names_to = "rawB") %>% 
   mutate(A=pmin(rawA, rawB), B=pmax(rawA, rawB)) %>%
@@ -39,10 +42,8 @@ ggplot(comp_df, aes(x=TissueSystem.y, color=grp, group=interaction(TissueSystem.
 
 Now, for the TCR data.  First, the per-patient boxplots.
 
-```{r}
-boxdir <- file.path(figs_dir, "boxplot_comparisons")
+```{r 39-figureS11-2 }
 
-dir.create(boxdir, showWarnings = FALSE)
 ### Per patient
 for (pat in unique(tcr_sample_metadata$indv_label)){#c("Pt1", "Pt2", "Pt3", "Pt5", "Pt6", "Pt7",  "Pt9")){
   print(str_glue("Processing {pat}"))
@@ -73,7 +74,7 @@ ggsave(p_, filename = file.path(boxdir, str_glue("{pat}_comparisons.png")), widt
 
 Then the same was calculated across all samples:
 
-```{r}
+```{r 39-figureS11-3 }
 
 
 tcr_corrs_anno <- tcr_corrs %>% 
@@ -86,8 +87,8 @@ pt_comp_df_all <- tcr_corrs_anno %>%
   select(A, B, value, pt, org, stype) %>% distinct() %>% 
   filter(A != B) %>% 
   filter(A != "graft_blood" & B != "graft_blood") %>%
-  left_join(newannotations, by=c("A"="tissue")) %>%
-  left_join(newannotations, by=c("B"="tissue")) %>%
+  left_join(tissue_annotations, by=c("A"="tissue")) %>%
+  left_join(tissue_annotations, by=c("B"="tissue")) %>%
   mutate(grp = ifelse(plotgroup.x==plotgroup.y, "Within", "Between")) 
 
 # 
@@ -128,7 +129,7 @@ stat_pvalue_manual(
   ) + theme(
     axis.ticks.x=element_blank(), axis.text.x = element_blank(),
     ) +
-  gridExtra::tableGrob(newannotations %>% select(plotgroup,  tissue) %>% distinct() %>% arrange(desc(plotgroup)), 
+  gridExtra::tableGrob(tissue_annotations %>% select(plotgroup,  tissue) %>% distinct() %>% arrange(desc(plotgroup)), 
                        theme = gridExtra::ttheme_minimal( base_size=7),
                        rows=NULL) + 
   plot_layout(widths = c(8, 2)))
@@ -139,7 +140,7 @@ ggsave(p_between_within, filename = file.path(boxdir, "mouse_human_between_withi
 
 
 Next, we shuffled the classes for the systems with multiple tissues represented in the data (limiting to human samples for simplicity).  The probability weight of the sampling was set to mimic the comparisons at hand
-```{r}
+```{r 39-figureS11-4 }
 (weights <- pt_comp_df_all %>%
   filter(org == "Human") %>%
   group_by(plotgroup.x, org) %>%
@@ -157,7 +158,7 @@ The sampling was performed 100 times, and plotted below.
 > To assess the stability of the comparisons within systems
 
 
-```{r}
+```{r 39-figureS11-5 }
 tissues_for_comparisons <- pt_comp_df_all %>%
   filter(org == "Human" ) %>% 
   group_by(plotgroup.x, org) %>% filter(n_distinct(grp) > 1) %>% pull(plotgroup.x) %>% unique()
@@ -212,7 +213,7 @@ ggsave(p_shuff_summary, filename = file.path(boxdir, "shuffles_between_within_su
 
 Lastly, we compared the broad categories of intestinal vs non-intestinal, rather than by tissue system:
 
-```{R}
+```{R 39-figureS11-6 }
 sets_of_comparisons <- list(
   "intestinal" = c("Large Intestine", "Small Intestine"),
   "GI" = c("Large Intestine","Small Intestine", "mLN", "Upper GI")
@@ -291,18 +292,18 @@ for (si in 1:length(sets_of_comparisons)){
 ```
 
 ## Raw data comparison plots
-```{r}
+```{r 39-figureS11-7 }
 # note the lack of the `distinct()` call here; we need all the (redundant) comparisons for this figure
 set.seed(123)
 
 for(i in  unique(tcr_corrs_anno$indv_label.x)){
   tmp_p <- ggplot(tcr_corrs_anno %>% 
            filter(indv_label.x == indv_label.y) %>% filter(indv_label.x==i)  %>%  
-             left_join(newannotations, by=c("tissue.x"="tissue")) %>%
-           left_join(newannotations, by=c("tissue.y"="tissue")) , aes(x=tissue.x, y=JSD, shape=tissue.y, color=tissue.y)) + 
+             left_join(tissue_annotations, by=c("tissue.x"="tissue")) %>%
+           left_join(tissue_annotations, by=c("tissue.y"="tissue")) , aes(x=tissue.x, y=JSD, shape=tissue.y, color=tissue.y)) + 
     geom_jitter(width = .2, height = 0, size=3)  + 
-    scale_color_manual(values=newannotations$new_col, breaks=newannotations$tissue) +
-    scale_shape_manual(values=newannotations$shape, breaks=newannotations$tissue) +
+    scale_color_manual(values=tissue_annotations$new_col, breaks=tissue_annotations$tissue) +
+    scale_shape_manual(values=tissue_annotations$shape, breaks=tissue_annotations$tissue) +
     labs(x="Tissue", shape="Tissue", subtitle=i, color="Tissue") +
     theme_classic()   + theme(axis.text.x = element_text(angle=45, hjust=1)) + 
     scale_y_continuous(limits=c(0, 1))
@@ -317,7 +318,7 @@ for(i in  unique(tcr_corrs_anno$indv_label.x)){
 
 ## Summarizing Mouse TCR data
 
-```{r}
+```{r 39-figureS11-8 }
 tcr_corrs_anno_mouse <- tcr_corrs_anno %>% 
   filter(pair_is_unique == TRUE) %>% 
   filter(org.x=="Mouse") %>% filter(org.y=="Mouse") %>% 
@@ -370,7 +371,8 @@ for (gr in c("GvHD", "noGvHD")){
   for (cday in c(7, 14)){
     
     this_corr_data <-  tcr_corrs_anno_mouse_summary %>% 
-      filter(gvhd.x == gr) 
+      filter(gvhd.x == gr) %>% 
+      filter(tissue.x != "Tcells",tissue.y != "Tcells" )
     # No days for healthy mice, take all of them
     if (gr == "GvHD"){
       this_corr_data <-  this_corr_data %>% 
@@ -389,7 +391,7 @@ for (gr in c("GvHD", "noGvHD")){
     
     tcr_agg_mice_ordered <- tcr_agg_mice[samples_ordered, samples_ordered]
     # get the clean, ordered sampleids
-    samples_ordered_df <- left_join(data.frame(tissue=samples_ordered), newannotations, by="tissue")
+    samples_ordered_df <- left_join(data.frame(tissue=samples_ordered), tissue_annotations, by="tissue")
     if (!all(samples_ordered == samples_ordered_df$sample_name)) {stop("Error assigning clean name to ordered tissues")}
     samples_ordered_clean <- samples_ordered_df %>% pull(tissue)
     
@@ -408,7 +410,7 @@ for (gr in c("GvHD", "noGvHD")){
                      lab=rev(tick_pos),  yend=rep(.3, length(tick_pos))) 
     
     
-    p_tcr_all <- ggtree(tmp)  %<+% newannotations + xlim(-.45, 1.25) +
+    p_tcr_all <- ggtree(tmp)  %<+% tissue_annotations + xlim(-.45, 1.25) +
       geom_tiplab(aes(color=new_col, label=tissue_label), 
                   offset = 0.01,#(1-max(tmp$edge.length)) + .01, 
                   align = FALSE, linetype = NA) +
@@ -420,7 +422,7 @@ for (gr in c("GvHD", "noGvHD")){
       geom_segment(data=ticks, aes(y=-yend, yend=0, x=x, xend=x )) +
       theme(legend.position = c(.2, .95)) 
     mouse_summary_plist[[gr]] <- p_tcr_all
-    ggsave(p_tcr_all, filename = file.path(figs_dir, str_glue("aggregated_mouse_tcr_{gr}_day{cday}.pdf")), width=6, height=8,device = "pdf")
+    ggsave(p_tcr_all, filename = file.path("figures", str_glue("aggregated_mouse_tcr_{gr}_day{cday}.pdf")), width=6, height=8,device = "pdf")
     
     tcr_agg_mice_ordered[upper.tri(tcr_agg_mice_ordered)] <- NA
     diag(tcr_agg_mice_ordered) <- NA
