--- a/37-figureSX-abundance.Rmd
+++ b/37-figureSX-abundance.Rmd
@@ -1,4 +1,4 @@
-```{r setup, include=FALSE}
+```{r setup-37, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, fig.width=10, fig.height=7) 
 library(tidyverse) 
 library(patchwork)  # for combining figures
